2010-10-16 Sat  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-debian-bug-info-macro):
	Document INFO structure in docstring.
	(tinydebian-debian-parse-bts-bug-info-raw): Add missing fields
	to docstring.
	(tinydebian-bts-mail-type-reply): if bug report number is
	different from current line, query BTS directly with HTTP
	to retrieve correct subject for the composed email.

2010-10-15 Fri  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-bts-mail-type-it-nmu): Chnage
	subject to follow standard Debian BTS message format
	'Bug#NNNN: <action> (<description>)'

2010-10-12 Tue  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-mail-mode): Correct
	menu entry for "notfixed" and "fixed" BTS control commands.

2010-06-18  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-:gnu-bts-email-address): New.
	(tinydebian-gnu-bts-email-compose): New.
	(tinydebian-gnu-bts-email-control): New.
	(tinydebian-bts-generic-email-control): Detect GNU debbugs.
	(tinydebian-emacs-gnu-type-p): New.
	(tinydebian-bug-report-generic-bts-mail): New.
	(tinydebian-bug-report-debian-bts-mail): Rename.
	(tinydebian-bts-mode): "Report a new bug" calls
	`tinydebian-bug-report-generic-bts-mail'.
	(tinydebian-bug-report-gnu-bts-mail): New.
	(tinydebian-system-os-debian-p): New.
	(tinydebian-bts-email-compose): Add GNU coreutils.
	(tinydebian-bug-gnu-bts-gnus-summary-p): New.
	(tinydebian-gnu-bts-bug-type-p): New.
	(tinydebian-bug-gnu-bts-buffer-p): New.
	(tinydebian-bug-gnu-bts-re-search-p): New.
	(tinydebian-bug-gnu-bts-re-search-email): New.
	(tinydebian-bug-gnu-bts-gnus-article-p): New.
	(tinydebian-bug-gnu-bts-gnus-summary-line-p): New.
	(tinydebian-gnu-bts-bug-url-compose): New.
	(tinydebian-:gnu-bts-url-http-bugs): New.
	(tinydebian-bug-gnu-emacs-bts-gnus-summary-line-p): Correct regexp.
	(tinydebian-bug-bts-type-determine): Detect GNU BTS.
	(tinydebian-bug-ask-bts-and-number): Add GNU BTS.